5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1834_2602.log
== TEST (2019-06-14 20:29:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tab = array([2 , 1 , 4],
				[1 , 2 , 3],
				[2 , 3 , 2])

pop=dot(inv(tab),xyz.T)

print("estafilococo: ", round(preco[0], 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

# Imprime nome da fruta mais cara
if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-14 20:30:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tab = array([2 , 1 , 4],
				[1 , 2 , 3],
				[2 , 3 , 2])

pop=dot(inv(tab),xyz.T)

print("estafilococo: ", round(preco[0], 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

# Imprime nome da fruta mais cara
if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- EXECUTION TIME:
1.04389
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 8, in <module>
    [2 , 3 , 2])
ValueError: only 2 non-keyword arguments accepted

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 20:30:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tab = array([2 , 1 , 4],
				[1 , 2 , 3],
				[2 , 3 , 2])

pop=dot(inv(tab),xyz.T)

print("estafilococo: ", round(preco[0], 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

# Imprime nome da fruta mais cara
if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 21:46:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tab = array([2 , 1 , 4],
				[1 , 2 , 3],
				[2 , 3 , 2])

pop=dot(inv(tab),xyz)

print("estafilococo: ", round(pop[0], 1))
print("salmonela: ", round(pop[1], 1))
print("coli: ", round(pop[2], 1))


if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 21:47:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tab = array([2 , 1 , 4],[1 , 2 , 3],[2 , 3 , 2])

pop=dot(inv(tab),xyz)

print("estafilococo: ", round(pop[0], 1))
print("salmonela: ", round(pop[1], 1))
print("coli: ", round(pop[2], 1))


if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 21:47:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tab = array([2 , 1 , 4],[1 , 2 , 3],[2 , 3 , 2])

pop=dot(inv(tab),xyz)

print("estafilococo: ", round(pop[0], 1))
print("salmonela: ", round(pop[1], 1))
print("coli: ", round(pop[2], 1))


if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 21:47:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([2 , 1 , 4],[1 , 2 , 3],[2 , 3 , 2])

pop=dot(inv(tabd),xyz)

print("estafilococo: ", round(pop[0], 1))
print("salmonela: ", round(pop[1], 1))
print("coli: ", round(pop[2], 1))


if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 21:47:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([2 , 1 , 4],[1 , 2 , 3],[2 , 3 , 2])

pop=dot(inv(tabd),xyz)

print("estafilococo: ", round(pop[0], 1))
print("salmonela: ", round(pop[1], 1))
print("coli: ", round(pop[2], 1))


if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 21:48:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[2 , 1 , 4],[1 , 2 , 3],[2 , 3 , 2]])

pop=dot(inv(tabd),xyz)

print("estafilococo: ", round(pop[0], 1))
print("salmonela: ", round(pop[1], 1))
print("coli: ", round(pop[2], 1))


if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 21:49:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[2 , 1 , 4],[1 , 2 , 3],[2 , 3 , 2]])

pop=dot(tabd,xyz)

print("estafilococo: ", round(pop[0], 1))
print("salmonela: ", round(pop[1], 1))
print("coli: ", round(pop[2], 1))


if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 21:50:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[2 , 1 , 4],[1 , 2 , 3],[2 , 3 , 2]])

pop=dot(tabd*xyz)

print("estafilococo: ", round(pop[0], 1))
print("salmonela: ", round(pop[1], 1))
print("coli: ", round(pop[2], 1))


if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 21:50:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[2 , 1 , 4],[1 , 2 , 3],[2 , 3 , 2]])

pop=dot(tabd*xyz)

print("estafilococo: ", round(pop[0], 1))
print("salmonela: ", round(pop[1], 1))
print("coli: ", round(pop[2], 1))


if pop[0] == max(pop):
    print("estafilococo")
elif pop[1]== max(pop):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 22:45:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))


tabd= array([[2 , 1 , 4],
				 [1 , 2 , 3],
				 [2 , 3 , 2]])

i = tabd[0,:] * xyz[0]
j = tabd[1,:] * xyz[1]
k = tabd[2,:] * xyz[2]

print(i,j,k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 22:47:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))


tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

i = xyz[0] * tabd[0,:]
j = xyz[1] * tabd[1,:]
k = xyz[2] * tabd[2,:]

print(i,j,k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 22:48:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))


tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

i = xyz[0] / tabd[0,:]
j = xyz[1] / tabd[1,:]
k = xyz[2] / tabd[2,:]

print(i,j,k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 22:53:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))


tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

i = xyz[0] * tabd[0,:]
j = xyz[1] * tabd[1,:]
k = xyz[2] * tabd[2,:]

print(i,j,k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 22:58:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

tabd= array([[xyz[0], xyz[0], xyz[0]],
				 [xyz[1], xyz[1], xyz[1]],
				 [xyz[2], xyz[2], xyz[2]]

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
File "XXXX", line 10
    x = xyz[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:08:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

print(i,j,k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:10:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

prod = mxyz * tabd

print(i,j,k)

print("qweowpiq:", prod)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:10:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

prod = mxyz * tabd

print(i,j,k)

print(prod)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:10:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

prod = mxyz * tabd

print(i,j,k)

print(prod)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:13:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

prod = mxyz * tabd

print(i,j,k)

print(prod)

somaE = sum(prod[:,0])
print(somaE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:13:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]


i = x * aliA
j = y * aliB
k = z * aliC

prod = mxyz * tabd

print(i,j,k)

print(prod)

somaE = sum(prod[:,0])/sum(estaf)
print(somaE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:18:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]

prod = mxyz * tabd

print(i,j,k)

print(prod)

somaE = sum(prod[:,0])/sum(estaf)
print(somaE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:18:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]

prod = mxyz * tabd

print(i,j,k)

print(prod)

somaE = sum(prod[:,0])/sum(estaf)
print(somaE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:18:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]

prod = mxyz * tabd

print(prod)

somaE = sum(prod[:,0])/sum(estaf)
print(somaE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:19:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]

prod = mxyz / tabd

print(prod)

somaE = sum(prod[:,0])/sum(estaf)
print(somaE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:29:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]

prod = mxyz / tabd

print(prod)

somaE = sum(prod[:,0])/sum(estaf)
print(somaE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-15 23:29:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = array(eval(input("")))

x = xyz[0]
y = xyz[1]
z = xyz[2]

mxyz = ([[x, x, x],
			[y, y, y],
			[z, z, z]])

tabd= array([[2 , 1 , 4],
				 [1 , 2 , 0],
				 [2 , 3 , 2]])

estaf = tabd[:,0]
salmo = tabd[:,1]
coli = tabd[:,2]

aliA = tabd[0,:]
aliB = tabd[1,:]
aliC = tabd[2,:]

prod = mxyz * tabd

print(prod)

somaE = sum(prod[:,0])/sum(estaf)
print(somaE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:06:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

j = array(eval(input(("")))
tab = array([[2 , 1 , 4], [1 , 2 , 0], [2 , 3 , 2]]))

# Vetor de constantes (informado no enunciado)
j = j.T

k = dot(inv(tab),j)

# Resolucao do sistema de equacoes lineares
preco = dot(inv(frutas),compras.T)

# Imprime o preco de cada fruta
print("estafilococo: ", round(k[0], 1))
print("salmonela: ", round(k[1], 1))
print("coli: ", round(k[2], 1))

# Imprime nome da fruta mais cara
if k[0] == min(k):
    print("estafilococo")
elif k[1] == min(k):
    print("salmonela")
else:
    print("coli")
-- EXECUTION TIME:
0.512146
-- ERROR:
  File "/home/codebench/codes/1834/2602/main.py", line 5
    tab = array([[2 , 1 , 4], [1 , 2 , 0], [2 , 3 , 2]]))
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:06:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

j = array(eval(input(("")))
tab = array([[2 , 1 , 4], [1 , 2 , 0], [2 , 3 , 2]]))

# Vetor de constantes (informado no enunciado)
j = j.T

k = dot(inv(tab),j)

# Resolucao do sistema de equacoes lineares

# Imprime o preco de cada fruta
print("estafilococo: ", round(k[0], 1))
print("salmonela: ", round(k[1], 1))
print("coli: ", round(k[2], 1))

# Imprime nome da fruta mais cara
if k[0] == min(k):
    print("estafilococo")
elif k[1] == min(k):
    print("salmonela")
else:
    print("coli")
-- ERROR:
File "XXXX", line 5
    tab = array([[2 , 1 , 4], [1 , 2 , 0], [2 , 3 , 2]]))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:06:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

j = array(eval(input((""))))

tab = array([[2 , 1 , 4], [1 , 2 , 0], [2 , 3 , 2]]))

# Vetor de constantes (informado no enunciado)
j = j.T

k = dot(inv(tab),j)

# Resolucao do sistema de equacoes lineares

# Imprime o preco de cada fruta
print("estafilococo: ", round(k[0], 1))
print("salmonela: ", round(k[1], 1))
print("coli: ", round(k[2], 1))

# Imprime nome da fruta mais cara
if k[0] == min(k):
    print("estafilococo")
elif k[1] == min(k):
    print("salmonela")
else:
    print("coli")
-- ERROR:
File "XXXX", line 6
    tab = array([[2 , 1 , 4], [1 , 2 , 0], [2 , 3 , 2]]))
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:06:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

j = array(eval(input((""))))

tab = array([[2 , 1 , 4], [1 , 2 , 0], [2 , 3 , 2]])

# Vetor de constantes (informado no enunciado)
j = j.T

k = dot(inv(tab),j)

# Resolucao do sistema de equacoes lineares

# Imprime o preco de cada fruta
print("estafilococo: ", round(k[0], 1))
print("salmonela: ", round(k[1], 1))
print("coli: ", round(k[2], 1))

# Imprime nome da fruta mais cara
if k[0] == min(k):
    print("estafilococo")
elif k[1] == min(k):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:06:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

j = array(eval(input((""))))

tab = array([[2 , 1 , 4], [1 , 2 , 0], [2 , 3 , 2]])

# Vetor de constantes (informado no enunciado)
j = j.T

k = dot(inv(tab),j)

# Resolucao do sistema de equacoes lineares

# Imprime o preco de cada fruta
print("estafilococo: ", round(k[0], 1))
print("salmonela: ", round(k[1], 1))
print("coli: ", round(k[2], 1))

# Imprime nome da fruta mais cara
if k[0] == min(k):
    print("estafilococo")
elif k[1] == min(k):
    print("salmonela")
else:
    print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:06:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

j = array(eval(input((""))))

tab = array([[2 , 1 , 4], [1 , 2 , 0], [2 , 3 , 2]])

# Vetor de constantes (informado no enunciado)
j = j.T

k = dot(inv(tab),j)

# Resolucao do sistema de equacoes lineares

# Imprime o preco de cada fruta
print("estafilococo: ", round(k[0], 1))
print("salmonela: ", round(k[1], 1))
print("coli: ", round(k[2], 1))

# Imprime nome da fruta mais cara
if k[0] == min(k):
    print("estafilococo")
elif k[1] == min(k):
    print("salmonela")
else:
    print("coli")
-- EXECUTION TIME:
1.07768
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
